--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                     <div class="soc_icons">
                         <ul>
                             <li>
-                                <a href="https://twitter.com/cool_dogs_club" target="_blank">
+                                <a href="https://twitter.com/" target="_blank">
                                     <img src="images/twitter.svg" alt="twitter">
                                 </a>
                             </li>
                             <li>
-                                <a href="https://discord.gg/mqkbwETynW" target="_blank">
+                                <a href="https://discord.gg/" target="_blank">
                                     <img src="images/discord.svg" alt="discord">
                                 </a>
                             </li>
