--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                                        <ul>
                                            <li>
                                                <p>
-                                                   <b>Webpage:</b> Sosite hui.
+                                                   <b>Webpage:</b> Launching the webpage where NFT holders can connect NEAR wallet and look at their NFTs value via our algorithm.
                                                </p>
                                            </li>
                                            <li>
